因引擎采用1.4兼容, 所以将Integer.valueOf改成new Integer